--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,13 +96,17 @@ body {
       background-color: #0274b3;  Darkcyan 
       color: #ffffff;
   }*/
+  header {
+      max-width: auto;
+      width: 100%;
+  }
 
   .front-page .front-body {
       display: table-cell;
       vertical-align: middle;
   }
 
-  .front-body {
+  .front-page {
 /*    display: table;*/
    /* width: 100%;
     height: 100%;*/
@@ -229,9 +233,8 @@ h4 {
 @media screen and (max-width: 640px) {
   
 
-  #contact-section {
-    margin-left: 10px;
-  }
+
+
 /*Message form panel*/
   #message-form {
     margin: 0;
@@ -240,6 +243,7 @@ h4 {
     text-align: center;
     float: none;
   }
+
 /*Connect Panel*/
   #connect {
     margin: 0;
