--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,83 +8,7 @@ body {
     box-sizing: border-box;
   }
 
-/*Background slideshow*/
-   /* #background-pics {
-      z-index: 0;
-    }
-    .css-slideshow{
-       position: relative;
-       max-width: 100%;
-       height: 100%
-       margin: 5em auto .5em auto;
-    }
-    .css-slideshow figure{
-       margin: 0;
-       position: absolute;
-    }
-    .css-slideshow figcaption{
-       position: absolute;
-       top: 0;
-       color: #fff;
-       background: rgba(0,0,0, .3);
-       font-size: .8em;
-       padding: 8px 12px;
-       opacity: 0;
-       transition: opacity .5s;
-    }
-    .css-slideshow:hover figure figcaption{
-       transition: opacity .5s;
-       opacity: 1;
-    }
-    .css-slideshow figure{
-       opacity:0;
-    }
-
-    figure:nth-child(1) {
-       animation: xfade 48s 42s infinite;
-    }
-    figure:nth-child(2) {
-       animation: xfade 48s 36s infinite;
-    }
-    figure:nth-child(3) {
-       animation: xfade 48s 30s infinite;
-    }
-    figure:nth-child(4) {
-       animation: xfade 48s 24s infinite;
-    }
-    figure:nth-child(5) {
-       animation: xfade 48s 18s infinite;
-    }
-    figure:nth-child(6) {
-       animation: xfade 48s 12s infinite;
-    }
-    figure:nth-child(7) {
-       animation: xfade 48s 6s infinite;
-    }
-    figure:nth-child(8) {
-       animation: xfade 48s 0s infinite;
-    }
-
-    @keyframes xfade{
-       0%{
-          opacity: 1;
-       }
-       10.5% {
-          opacity:1;
-       }
-       12.5%{
-          opacity: 0;
-       }
-       98% {
-          opacity:0;
-       }
-       100% {
-          opacity:1;
-       }
-    }*/
-
 /**/
-
   p {
     font-size: 16px;
     color: black;
@@ -92,33 +16,52 @@ body {
   .margin {
     margin-bottom: 45px;
   }
+
 /*  .bg-1 { 
       background-color: #0274b3;  Darkcyan 
       color: #ffffff;
   }*/
-  header {
-      max-width: auto;
-      width: 100%;
-  }
 
-  .front-page .front-body {
-      display: table-cell;
-      vertical-align: middle;
-  }
 
-  .front-page {
+
+
+ /* .front-page {*/
 /*    display: table;*/
    /* width: 100%;
     height: 100%;*/
-    padding: 225px 89.5px;
+/*    padding: 225px 89.5px;
     background-image: url("../images/skyline.jpeg");
-    background-size: cover;
+    background-size: cover;*/
+  /*}*/
+
+  /* The animation slideshow code */
+  @keyframes slideshow {
+      0%   {background-image: url("../images/skyline.jpeg");}
+      25%   {background-image: url("../images/skyline.jpeg");}
+      50%  {background-image: url("../images/suburbs.jpg");}
+      75%  {background-image: url("../images/landscape.jpeg");}
+      100% {background-image: url("../images/beach.jpeg");}
   }
 
-/*  #front-caption {
+  /* The element to apply the animation to */
+  .background-pics {
+      padding-top: 640px;
+      max-width: auto;
+      width: 100%;
+      height: 100%;
+      /*background-image: url("../images/skyline.jpeg");*/
+      background-size: cover;
+      animation-name: slideshow;
+      animation-duration: 10s;
+      animation-iteration-count: infinite;
+  }
+
+
+  #front-caption {
     position: absolute;
+    left: 75px;
     bottom: 100px;
-  }*/
+  }
 
 
   .bg-2 { 
@@ -233,7 +176,13 @@ h4 {
 @media screen and (max-width: 640px) {
   
 
+/*Projects*/
 
+
+/*.project-image {
+  width: 400px;
+  height: 400px;
+}*/
 
 /*Message form panel*/
   #message-form {
