--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ body {
     position: absolute;
     left: 75px;
     bottom: 100px;
+    font-style: italic;
   }
 
 
@@ -92,10 +93,10 @@ body {
 
 /*Contact Section*/
 
-#contact-section {
+/*#contact-section {
   max-width: 1200px;
   width: 100%;
-}
+}*/
 
 /*Message Form*/
 
