--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,30 +23,30 @@ body {
 /*First Container*/
 
   /* The animation slideshow code */
-/*  @keyframes slideshow {
+@keyframes slideshow {
       0%  {background-image: url("../images/skyline.jpeg");}
       25%  {background-image: url("../images/suburbs.jpg");}
       50%  {background-image: url("../images/landscape.jpeg");}
       75% {background-image: url("../images/beach.jpeg");}
-  }*/
+  }
 
-  /* The element to apply the animation to */
-/*  .background-pics {
+   /*The element to apply the animation to */
+.background-pics {
       max-width: 100%;
       width: 100%;
       height: 640px;
-      /*background-image: url("../images/skyline.jpeg");*/
-      /*background-size: cover;
+      background-image: url("../images/skyline.jpeg");
+      background-size: cover;
       animation-name: slideshow;
       animation-duration: 10s;
-      animation-iteration-count: infinite;*/
-  /*}*/
+      animation-iteration-count: infinite;
+  }
 
-  .background-image {
+/*  .background-image {
   
     width: 100%;
     height: auto;
-  }
+  }*/
 
 /*  #nav {
     position: fixed;
@@ -72,6 +72,10 @@ body {
   .bg-2 { 
       background-color: black;
       color: #ffffff;
+  }
+
+  h3, #about h3 {
+    color: white;
   }
 
   #about-summary {
@@ -102,8 +106,8 @@ body {
 
   /*Contact Section*/
   .bg-4 { 
-      background-color: black; 
       color: #fff;
+      background: url("../images/old_wall.png");
   }
   
   .container {
@@ -155,13 +159,19 @@ label {
 
 #connect {
   max-width: 400px;
+  margin-right: 50px;
   float: right;
   width: 100%;
   background: #fff;
-  padding: 15px;
+  padding: 30px;
   border: 1px solid #ddd;
+  margin-bottom: 20px;
 }
 
+h3, #connect h3 {
+  color: black;
+
+}
 h4, #connect h4 {
   border-bottom: 2px solid #eee;
   margin-bottom: 15px;
@@ -174,11 +184,10 @@ h4 {
 }
 
 .social {
-  height: 100px;
-  width: 100px;
-  float: left;
+  height: 75px;
+  width: 75px;
   margin-top: 8px;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .social:last-child {
@@ -219,7 +228,6 @@ h4 {
 
 /*Connect Panel*/
   #connect {
-    margin: 0;
     margin-top: 75px;
     max-width: 550px;
     width: 100%;
@@ -230,6 +238,7 @@ h4 {
   }
 
   .social {
+    text
     height: 100px;
     width: 85px;
   }
