--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,32 +205,44 @@ h4 {
 }
 
 @media screen and (max-width: 640px) {
-  
+
+.container-fluid {
+  max-width: 640px;
+  width: 100%;
+}
+
+#front-caption {
+  margin: auto;
+}
 
 /*Background Slideshow*/
   .background-image img {
+    max-width: 640px;
     width: 100%;
-    height: 530px;
   }
 
-.container-fluid {
-  padding: none;
+/*About Me Section*/
+
+#about-summary {
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 /*Message form panel*/
   #message-form {
-    margin: 0;
     max-width: 550px;
     width: 100%;
+    margin: auto;
     text-align: center;
     float: none;
   }
 
 /*Connect Panel*/
   #connect {
-    margin-top: 75px;
     max-width: 550px;
     width: 100%;
+    margin: auto;
+    margin-top: 75px;
     max-height: 300px;
     height: 100%;
     text-align: center;
@@ -238,7 +250,6 @@ h4 {
   }
 
   .social {
-    text
     height: 100px;
     width: 85px;
   }
